clusters/lynka/kubernetes/apps/monitoring/victoria-metrics-k8s-stack/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: vmagent-to-metrics-endpoints
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmagent
      app.kubernetes.io/component: monitoring
  egress:
    - toEndpoints:
        - matchLabels:
            ingress.samoth.eu/vmagent: allow
    - toEntities:
        - host
      toPorts:
        - ports:
            # kubeapi
            - port: "6443"
              protocol: TCP
            - port: "6443"
              protocol: UDP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vmalert-to-vmsingle
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmalert
      app.kubernetes.io/component: monitoring
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmsingle
            app.kubernetes.io/component: monitoring
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vmsingle-from-vmalert
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmsingle
      app.kubernetes.io/component: monitoring
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmalert
            app.kubernetes.io/component: monitoring
